# CV-IS-Fall-2024

./: .gitignore  .gitmodules  README.md  train_dfa_ops_generic.sh  upload_unity_generic.sh
mamba_ocr/: .env.example  README.md  pyproject.toml  requirements.txt  slurm_constraints
mamba_ocr/config/: basic.yaml  basic_medmamba.yaml  basic_medmamba_synth.yaml  basic_pe.yaml  basic_pe_synth.yaml  basic_pe_synth_mamba_like.yaml  medmamba_mscoco.yaml  medmamba_synth.yaml  medmamba_synth_mnist_like.yaml  sequence_stack_mscoco.yaml  sequence_stack_synth.yaml  sequence_stack_synth_mnist_like.yaml
mamba_ocr/scripts/: install.sh  pull.sh  push.sh  push_data.sh  push_unity.sh  run_test.sh  unity_init_venv.sh  unity_install.sh  unity_run_test.sh
mamba_ocr/src/mamba_ocr/: __init__.py
mamba_ocr/src/mamba_ocr/charts/: data_mm_mnist.txt  data_mm_mscoco.txt  data_mm_word.txt  data_mm_word_5_dec.txt  data_mm_word_7_dec_1.txt  data_mm_word_7_dec_2.txt  data_ss_mnist.txt  data_ss_mnist_5_dec.txt  data_ss_mscoco.txt  mm_mnist.py  mm_mscoco.py  mm_words.py  ss_mnist.py  ss_mscoco.py  ss_words.py
mamba_ocr/src/mamba_ocr/data_loaders/: __init__.py  iam_task.py  iam_task_test.py  latex_task.py  latex_task_test.py  mscoco_task.py  mscoco_task_test.py  ocr_data_loader.py  ocr_task.py  ocr_task_base.py  partition_task.py  synthetic_text_task.py  synthetic_text_task_test.py  synthetic_text_task_test_letters.py  test_ocr_data_loader.py  util.py
mamba_ocr/src/mamba_ocr/models/: __init__.py  __main__.py  cnn_sequence_stack.py  mamba_cnn_stack.py  util.py  (+9 more)
mamba_ocr/src/models/: resnet.py
(+162 files in other folders)
